--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
 desktop.ini
-.pio/build/project.checksum
-.vscode/c_cpp_properties.json
-.vscode/extensions.json
-.vscode/launch.json
+.vscode/
 shelbyworkspace.code-workspace
+.pio/
