--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,16 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs = teensy36
+
 [env:teensy36]
 platform = teensy
 board = teensy36
 framework = arduino
+lib_deps = 
+	fastled/FastLED@^3.3.3
+	adafruit/Adafruit BusIO@^1.5.0
+	adafruit/Adafruit GFX Library@^1.10.1
+	greiman/SdFat@^1.1.4
+	adafruit/Adafruit ILI9341@^1.5.6
