--- a/platformio.ini
+++ b/platformio.ini
@@ -15,10 +15,11 @@ default_envs = teensy36
 platform = teensy
 board = teensy36
 framework = arduino
+upload_port = COM[13]
 lib_deps = 
-	fastled/FastLED@^3.3.3
-	adafruit/Adafruit GFX Library@^1.10.1
-	greiman/SdFat@^1.1.4
-	adafruit/Adafruit ILI9341@^1.5.6
-	adafruit/Adafruit BusIO@^1.5.0
+	fastled/FastLED
+	greiman/SdFat
+	adafruit/Adafruit GFX Library
+	adafruit/Adafruit BusIO
 	Wire
+	adafruit/Adafruit ILI9341
