irdist and more

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,4 +22,6 @@ lib_deps =
 	adafruit/Adafruit GFX Library
 	adafruit/Adafruit BusIO
 	Wire
+	adafruit/Adafruit Unified Sensor
 	adafruit/Adafruit ILI9341
+	adafruit/Adafruit BNO055
