hopefully final changes for now!

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,12 +18,51 @@ framework = arduino
 upload_port = COM[13]
 lib_deps = 
 	greiman/SdFat
-	adafruit/Adafruit GFX Library
-	adafruit/Adafruit BusIO
+	adafruit/Adafruit GFX Library @ 1.10.10
+	adafruit/Adafruit BusIO @ 1.7.5
 	Wire
 	adafruit/Adafruit Unified Sensor
-	adafruit/Adafruit ILI9341
-	adafruit/Adafruit BNO055
+	adafruit/Adafruit ILI9341 @ 1.5.8
+    adafruit/Adafruit BNO055 @ 1.4.3
 	fastled/FastLED
 	https://github.com/Locoduino/RingBuffer.git
-	joshua1024/JMotor
+	joshua1024/JMotor @0.6.2
+    joshua1024/Derivs_Limiter @ 2.4.0
+
+;
+;Adafruit BNO055 by Adafruit
+; 1.4.3
+;
+;Adafruit BusIO by Adafruit
+; 1.7.5
+;
+;Adafruit GFX Library by Adafruit
+; 1.10.10
+;
+;Adafruit ILI9341 by Adafruit
+; 1.5.8
+;
+;Adafruit TouchScreen by Adafruit
+; 1.1.2
+;
+;Adafruit Unified Sensor by Adafruit
+; 1.1.4
+;
+;Derivs_Limiter by Joshua Phelps
+; 2.4.0
+;
+;EnableInterrupt by Mike 'GreyGnome' Schwager
+; 1.1.0
+;
+;FastLED by Daniel Garcia
+; 3.4.0
+;
+;JMotor by Joshua Phelps
+; 0.6.2
+;
+;RingBuffer by Jean-Luc - Locoduino
+; 1.0.3+sha.06e8bf1
+;
+;SdFat by Bill Greiman
+; 2.0.7
+;
